--- a/clusters/local/datahub/neo4j-secret.yaml
+++ b/clusters/local/datahub/neo4j-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: neo4j-secrets
-  namespace: default
+  namespace: datahub
 type: Opaque
 data:
   neo4j-password: ZGF0YWh1Yg==
