--- a/clusters/local/flux-system/gotk-sync.yaml
+++ b/clusters/local/flux-system/gotk-sync.yaml
@@ -9,9 +9,9 @@ spec:
   interval: 1m0s
   ref:
     branch: main
-  secretRef:
-    name: flux-system
-  url: ssh://git@github.com/owainperry/default-cluster
+  #secretRef:
+  #  name: flux-system
+  url: https://github.com/owain-nortal/flux-demo1
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
