--- a/clusters/local/flux-system/gotk-sync.yaml
+++ b/clusters/local/flux-system/gotk-sync.yaml
@@ -11,7 +11,7 @@ spec:
     branch: main
   secretRef:
     name: flux-system
-  url: ssh://git@github.com/owain-nortal/ceres
+  url: https://github.com/owain-nortal/flux-demo1
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
@@ -20,7 +20,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m0s
-  path: ./clusters/ceres
+  path: ./clusters/local
   prune: true
   sourceRef:
     kind: GitRepository
