--- a/clusters/local/flux-system/gotk-sync.yaml
+++ b/clusters/local/flux-system/gotk-sync.yaml
@@ -9,8 +9,8 @@ spec:
   interval: 1m0s
   ref:
     branch: main
-  secretRef:
-    name: flux-system
+  # secretRef:
+  #   name: flux-system
   url: https://github.com/owain-nortal/flux-demo1
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
