--- a/clusters/local/infrastructure.yaml
+++ b/clusters/local/infrastructure.yaml
@@ -29,16 +29,31 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
-  name: livy
+  name: lighter
   namespace: flux-system
 spec:
   interval: 10m0s
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./infrastructure/livy
+  path: ./infrastructure/lighter
   prune: true
   validation: client
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+kind: Kustomization
+metadata:
+  name: postgres
+  namespace: flux-system
+spec:
+  interval: 10m0s
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./infrastructure/postgres
+  prune: true
+  validation: client
+
 # ---
 # apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 # kind: Kustomization
@@ -109,3 +124,18 @@ spec:
 #   path: ./infrastructure/datahub
 #   prune: true
 #   validation: client  
+
+                    # ---
+                    # apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+                    # kind: Kustomization
+                    # metadata:
+                    #   name: livy
+                    #   namespace: flux-system
+                    # spec:
+                    #   interval: 10m0s
+                    #   sourceRef:
+                    #     kind: GitRepository
+                    #     name: flux-system
+                    #   path: ./infrastructure/livy
+                    #   prune: true
+                    #   validation: client
