--- a/infrastructure/lighter/pg-configmap.yaml
+++ b/infrastructure/lighter/pg-configmap.yaml
@@ -21,10 +21,10 @@ data:
 
     customDatabaseName="lighter"
     customUserName="lighter"
-
+    export PGPASSWORD=$POSTGRES_PASSWORD
     echo "$dt - Running: psql -v ON_ERROR_STOP=1 --username $POSTGRES_USER --dbname $POSTGRES_DB ...";
 
-    psql -v ON_ERROR_STOP=1 --username "$POSTGRES_USER" --dbname "$POSTGRES_DB" <<-EOSQL
+    psql -v ON_ERROR_STOP=1 --username "postgres" --dbname "$POSTGRES_DB" <<-EOSQL
     CREATE DATABASE $customDatabaseName;
     CREATE USER $customUserName WITH PASSWORD '$POSTGRES_MY_DB_PASSWORD';
     GRANT ALL PRIVILEGES ON DATABASE "$customDatabaseName" to $customUserName;
