--- a/clusters/local1/infrastructure.yaml
+++ b/clusters/local1/infrastructure.yaml
@@ -25,6 +25,20 @@ spec:
   path: ./infrastructure/spark-operator
   prune: true
   validation: client
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+kind: Kustomization
+metadata:
+  name: spark
+  namespace: flux-system
+spec:
+  interval: 10m0s
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./infrastructure/spark
+  prune: true
+  validation: client  
 # ---
 # apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 # kind: Kustomization
