enable web hook

--- a/infrastructure/spark-operator/release.yaml
+++ b/infrastructure/spark-operator/release.yaml
@@ -23,4 +23,5 @@ spec:
     serviceAccounts:
       spark:
         name: spark
-    enableWebhook: true        
+    webhook:
+      enable: true        
