--- a/clusters/sc02/infrastructure.yaml
+++ b/clusters/sc02/infrastructure.yaml
@@ -166,6 +166,20 @@ spec:
   path: ./infrastructure/external-dns
   prune: true
   validation: client  
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+kind: Kustomization
+metadata:
+  name: common-secrets
+  namespace: flux-system
+spec:
+  interval: 10m0s
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./infrastructure/secrets
+  prune: true
+  validation: client  
                     # ---
                     # apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
                     # kind: Kustomization
