--- a/infrastructure/secrets/external-dns-credentials.yaml
+++ b/infrastructure/secrets/external-dns-credentials.yaml
@@ -1,13 +1,13 @@
 kind: SealedSecret
 apiVersion: bitnami.com/v1alpha1
 metadata:
-  name: external-dns-config
+  name: edns-external-dns
   namespace: external-dns
   creationTimestamp:
 spec:
   template:
     metadata:
-      name: external-dns-config
+      name: edns-external-dns
       namespace: external-dns
       creationTimestamp:
     type: Opaque
