--- a/clusters/local-spark/flux-system/gotk-sync.yaml
+++ b/clusters/local-spark/flux-system/gotk-sync.yaml
@@ -20,7 +20,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m0s
-  path: ./clusters/sc02
+  path: ./clusters/local-spark
   prune: true
   sourceRef:
     kind: GitRepository
