--- a/clusters/sc02/datahub.yaml
+++ b/clusters/sc02/datahub.yaml
@@ -17,7 +17,7 @@ spec:
       group: helm.toolkit.fluxcd.io
       version: v2beta1
       kind: HelmRelease
-      name: "cluster-autoscaler"
+      name: "datahub"
       namespace: "flux-system"
     patch: |-
       - op: replace
