--- a/infrastructure/datahub/release-datahub.yaml
+++ b/infrastructure/datahub/release-datahub.yaml
@@ -26,9 +26,12 @@ spec:
         enabled: true
         annotations:          
           konghq.com/strip-path: "true"
-          kubernetes.io/ingress.class: kong
-          certmanager.k8s.io/cluster-issuer: letsencrypt-prod
-          certmanager.k8s.io/acme-challenge-type: http01
+          kubernetes.io/ingress.class: kong                    
+          kubernetes.io/tls-acme: "true"
+          #acme.cert-manager.io/http01-edit-in-place: "true"          
+          cert-manager.io/cluster-issuer: letsencrypt-prod
+          cert-manager.io/acme-challenge-type: http01
+
           #kubernetes.io/tls-acme: "true"
         hosts:
           - host: sc02.core.neosdata.io
