--- a/infrastructure/datahub/release-datahub.yaml
+++ b/infrastructure/datahub/release-datahub.yaml
@@ -30,7 +30,7 @@ spec:
           kubernetes.io/tls-acme: "true"
           #acme.cert-manager.io/http01-edit-in-place: "true"          
           cert-manager.io/cluster-issuer: letsencrypt-prod
-          cert-manager.io/acme-challenge-type: http01
+          #cert-manager.io/acme-challenge-type: http01
 
           #kubernetes.io/tls-acme: "true"
         hosts:
