--- a/infrastructure/kong/kong-release.yaml
+++ b/infrastructure/kong/kong-release.yaml
@@ -19,9 +19,17 @@ spec:
       retries: 9
   targetNamespace: kong
   values:
-    datahub-frontend:
-      service:
-        type: "ClusterIP"
-    datahub-gms:
-      service:
-        type: "ClusterIP"
+    dblessConfig:
+      config: |
+        # _format_version: "1.1"
+        # # this section is not necessary if there's already a route that matches
+        # # /.well-known/acme-challenge path with http protocol
+        # services:
+        #   - name: datahub
+        #     url: http://127.0.0.1:65535
+        #     routes:
+        #       - name: datahub
+        #         protocols:
+        #           - http
+        #         paths:
+        #           - /.well-known/acme-challenge
